# Animation_AAA

./: CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
Cookbook/: CMakeLists.txt
Data/Models/: Humanoid_robot_space_0531192924_texture.blend  Humanoid_robot_space_0531192924_texture.blend1  final low poly character  rigged.blend
MaximEngine/: CMakeLists.txt  Graphics.cpp  Graphics.h  LoadFile.hpp  main.cpp
MaximEngine/StateMachine/: StateMachineAnim.hpp
MaximEngine/TextEngine/: CMakeLists.txt  TextEngine.hpp
Samples/Common_Files/: CookbookSampleFramework.cpp  CookbookSampleFramework.h  OS.cpp  OS.h
